Fix z-index for expand button in header CSS

--- a/source/css/_partial/header.css
+++ b/source/css/_partial/header.css
@@ -66,6 +66,7 @@ header > *{
     position: absolute;
     width: 50px;
     height: 50px;
+    z-index: 9;
   }
   
   .expand-btn span{
